# VRCFavoLister-Desk

./: Dockerfile  README.md  compose.yaml
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml
app/VRCFavoLister/: package.json
app/VRCFavoLister/src-astro/: package.json
app/VRCFavoLister/src-tauri/: Cargo.toml  tauri.conf.json
app/vrc_favo_lister/: .eslintrc.json  .prettierrc.json  astro.config.mjs  package.json  tsconfig.json
app/vrc_favo_lister/public/css/: CardStyle.css  Main.css
app/vrc_favo_lister/src-tauri/: Cargo.toml  tauri.conf.json
app/vrc_favo_lister/src-tauri/src/: apiconfig.rs  commands.rs  database.rs  main.rs  structs.rs
app/vrc_favo_lister/src-tauri/src/commands/: auth.rs  database.rs  favorite.rs  utils.rs
app/vrc_favo_lister/src-tauri/src/database/: sqlitedb.rs
app/vrc_favo_lister/src-tauri/src/database/sql/: init.sql
app/vrc_favo_lister/src-tauri/src/sql/: 000_init.sql  init.sql
app/vrc_favo_lister/src-tauri/src/structs/: apiconfig.rs  app_state.rs  app_struct.rs  db_structs.rs  favorite_world.rs  favorite_world_from_api.rs  unity_package_from_api.rs
app/vrc_favo_lister/src/components/Card/: AvatarCard.astro  WorldCard.astro
app/vrc_favo_lister/src/layouts/: Layout.astro  LayoutMarkDown.astro
app/vrc_favo_lister/src/pages/: _index.astro  _world.astro  docs.md  favorite.astro  friend.astro  index.astro  login.astro  profile.astro  settings.astro  world.astro
app/vrc_favo_lister/src/types/: app_types.ts  avatar.ts  config.ts  unityPackages.ts  world.ts
app/vrc_favo_lister/src/utils/: index.ts
(+22 files in other folders)
